# pyre

./: .bzrignore  .clang-format  .gitignore  .travis.yml  ACKNOWLEDGMENTS  CMakeLists.txt  COPYRIGHT  LICENSE  Make.mm  PKG-INFO  README.md  TODO  breakfuncs.sh  config.def  configure  pyproject.toml  setup.py  setup.sh
extensions/: CMakeLists.txt  Make.mm
extensions/cuda/: Make.mm  cuda.cc  device.cc  device.h  discover.cc  discover.h  exceptions.cc  exceptions.h  metadata.cc  metadata.h
extensions/gsl/: Make.mm  __init__.cc  api.h  blas.cc  blas.h  capsules.h  dlpack.h  exceptions.cc  exceptions.h  external.h  forward.h  gsl.cc  histogram.cc  histogram.h  linalg.cc  linalg.h  matrix.cc  matrix.h  metadata.cc  metadata.h  numpy.cc  numpy.h  partition.cc  partition.h  pdf.cc  pdf.h  permutation.cc  permutation.h  rng.cc  rng.h  stats.cc  stats.h  vector.cc  vector.h
extensions/h5/: Attribute.cc  DAPL.cc  DCPL.cc  DXPL.cc  DataSet.cc  DataSpace.cc  FAPL.cc  FCPL.cc  File.cc  FileAccessPropertyList.cc  Group.cc  LAPL.cc  LCPL.cc  PropList.cc  __init__.cc  __init__.h  api.cc  attributes.h  attributes.icc  data.h  data.icc  dataset.cc  dataspace.cc  datatype.cc  enums.cc  external.h  fapl.cc  file.cc  forward.h  group.cc  h5.cc
extensions/h5/datatypes/: ArrayType.cc  AtomType.cc  CompType.cc  DataType.cc  EnumType.cc  FloatType.cc  IntType.cc  PredType.cc  StrType.cc  VarLenType.cc  __init__.cc  __init__.h  alpha.cc  big.cc  compound.cc  datatype.cc  datatypes.cc  external.h  forward.h  ieee.cc  intel.cc  little.cc  mips.cc  native.cc  predefined.cc  std.cc  unix.cc
extensions/h5/fapls/: external.h  fapls.cc  forward.h  ros3.cc
extensions/h5/properties/: DAPL.cc  DCPL.cc  DXPL.cc  FAPL.cc  FCPL.cc  LAPL.cc  LCPL.cc  List.cc  __init__.cc  __init__.h  external.h  forward.h
extensions/h5/types/: Array.cc  Atom.cc  Compound.cc  Datatype.cc  Enum.cc  Float.cc  Int.cc  Predefined.cc  String.cc  VarLen.cc  __init__.cc  __init__.h  alpha.cc  big.cc  external.h  forward.h  ieee.cc  intel.cc  little.cc  mips.cc  native.cc  std.cc  unix.cc
extensions/host/: Make.mm  cpu.cc  cpu.h  host.cc  metadata.cc  metadata.h
extensions/journal/: DefaultDevice.cc  DefaultDevice.h  DefaultDevice.icc  DeviceProxy.cc  DeviceProxy.h  DeviceProxy.icc  Make.mm  api.cc  channels.cc  channels.h  chronicler.cc  debug.cc  devices.cc  entry.cc  error.cc  exceptions.cc  exceptions.h  external.h  firewall.cc  forward.h  help.cc  helpers.h  helpers.icc  info.cc  init.cc  init.h  journal.cc  metadata.cc  metadata.h  opaque.cc  tests.cc  tests.h  warning.cc
extensions/mpi/: Make.mm  __init__.cc  capsules.h  communicators.cc  communicators.h  constants.h  exceptions.cc  exceptions.h  external.h  forward.h  groups.cc  groups.h  metadata.cc  metadata.h  mpi.cc  ports.cc  ports.h  startup.cc  startup.h
extensions/postgres/: Make.mm  connection.cc  connection.h  constants.h  exceptions.cc  exceptions.h  execute.cc  execute.h  interlayer.cc  interlayer.h  metadata.cc  metadata.h  postgres.cc
extensions/pyre/: __init__.cc  __init__.h  api.cc  external.h  forward.h  process_timers.cc  pyre.cc  wall_timers.cc
extensions/pyre/_grid_/: __init__.cc  __init__.h  external.h  forward.h  indices.cc  indices.h  indices.icc  xxx.cc  xxx.h  xxx.icc
extensions/pyre/grid/: __init__.cc  __init__.h  algebra.h  algebra.icc  external.h  forward.h  grid.cc  grids.cc  grids.h  grids.icc  grids_1d.cc  grids_2d.cc  grids_3d.cc  grids_4d.cc  indices.cc  indices.h  layouts.cc  layouts.h  orders.cc  orders.h  packings.cc  packings.h  reps.h  reps.icc  shapes.cc  shapes.h
extensions/pyre/memory/: __init__.cc  __init__.h  accessors.h  accessors.icc  bindings.h  bindings.icc  buffer_protocol.h  buffer_protocol.icc  buffers.cc  buffers.h  buffers.icc  cells.cc  cells.h  cells.icc  constmap_c4.cc  constmap_c8.cc  external.h  forward.h  heaps.cc  heaps.h  heaps.icc  interface.h  interface.icc  map_c4.cc  map_c8.cc  maps.cc  maps.h  maps.icc  memory.cc  mutators.h  mutators.icc  properties.h  properties.icc  views.cc  views.h  views.icc
extensions/pyre/timers/: __init__.cc  __init__.h  external.h  forward.h  process_timers.cc  timers.cc  wall_timers.cc
extensions/pyre/viz/: __init__.cc  __init__.h  bmp.cc  external.h  forward.h  viz.cc
extensions/pyrepg/: Make.mm  connection.cc  connection.h  constants.h  exceptions.cc  exceptions.h  execute.cc  execute.h  metadata.cc  metadata.h  misc.cc  misc.h  pyrepg-metadata.cc  pyrepg-metadata.h  pyrepg-module.cc  pyrepg.cc  pyrepgmodule.cc
extensions/timers/: Make.mm  display.cc  display.h  metadata.cc  metadata.h  timers.cc
lib/: CMakeLists.txt  Make.mm  portinfo  portinfo.in
lib/algebra/: BCD.h  BCD.icc  Make.mm  operators.h  operators.icc
lib/cuda/: cuda.h  memory.h
lib/cuda/memory/: DeviceMapped.h  DeviceMapped.icc  DevicePinned.h  DevicePinned.icc  HostMapped.h  HostMapped.icc  HostPinned.h  HostPinned.icc  Managed.h  Managed.icc  Mapped.h  Mapped.icc  Pinned.h  Pinned.icc  api.h  benchmark_kernel.cu  benchmark_kernel.h  externals.h  (+2 more)
lib/journal/: ANSI.cc  ANSI.h  ANSI_x11.cc  ASCII.h  Alert.cc  Alert.h  Bland.cc  Bland.h  CSI.h  CSI.icc  Channel.h  Channel.icc  Chronicler.cc  Chronicler.h  Chronicler.icc  Code.h  Code.icc  Color.h  Color.icc  Console.cc  Console.h  Console.icc  Debug.h  Debug.icc  Dent.h  Dent.icc  Detail.h  Detail.icc  Device.cc  Device.h  Device.icc  Diagnostic.h  Diagnostic.icc  Entry.h  Entry.icc  Error.h  Error.icc  ErrorConsole.cc  ErrorConsole.h  ErrorConsole.icc  (+72 more)
lib/mm/: portinfo  portinfo.h
lib/mpi/: Communicator.cc  Communicator.h  Communicator.icc  Error.cc  Error.h  Error.icc  Group.cc  Group.h  Group.icc  Handle.h  Handle.icc  Make.mm  Shareable.h  Shareable.icc  mpi.h
lib/patterns/: Make.mm  Registrar.h  Registrar.icc
lib/pyre/: Make.mm  _grid_.h  algebra.h  cuda.h  error.h  flow.h  geometry.h  grid.h  h5.h  math.h  memory.h  pyre.h  tensor.h  timers.h  typelists.h  version  version.cc  version.cc.in  version.h  version.h.in  viz.h
lib/timers/: Display.cc  Display.h  Display.icc  Make.mm  Timer.cc  Timer.h  Timer.icc  timers.h
(+4538 files in other folders)
